--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bandwidth-redoc",
-  "version": "1.0.0-beta.1",
+  "version": "0.1.0",
   "description": "Bandwidth ReDoc Fork",
   "repository": {
     "type": "git",
