--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: CI
-        run: npm ci && npm ci --prefix cli
+      # - name: CI
+      #   run: npm ci && npm ci --prefix cli
 
       # - name: Unit Test
       #   run: npm test
@@ -59,14 +59,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: CI
-        run: npm ci && npm ci --prefix cli
+      # - name: CI
+      #   run: npm ci && npm ci --prefix cli
 
-      - name: Download bundled artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: bundles
-          path: bundles
+      # - name: Download bundled artifact
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: bundles
+      #     path: bundles
 
       # - name: E2E Test
       #   run: npm run e2e
