--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
             npm-${{ hashFiles('package-lock.json') }}
             npm-
 
-      - name: CI
+      - name: Clean Install
         run: npm ci && npm ci --prefix cli
 
       - name: Bundle
@@ -45,11 +45,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # - name: CI
-      #   run: npm ci && npm ci --prefix cli
+      - name: Clean Install
+        run: npm ci && npm ci --prefix cli
 
-      # - name: Unit Test
-      #   run: npm test
+      - name: Unit Test
+        run: npm test
   
   e2e-tests:
     name: E2E Tests
@@ -59,17 +59,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # - name: CI
-      #   run: npm ci && npm ci --prefix cli
+      - name: Clean Install
+        run: npm ci && npm ci --prefix cli
 
-      # - name: Download bundled artifact
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: bundles
-      #     path: bundles
+      - name: Download bundled artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: bundles
+          path: bundles
 
-      # - name: E2E Test
-      #   run: npm run e2e
+      - name: E2E Test
+        run: npm run e2e
   
   publish:
     name: Publish
