--- a/package.json
+++ b/package.json
@@ -141,6 +141,13 @@
     "styled-components": "^4.1.1 || ^5.1.1"
   },
   "dependencies": {
+    "@emotion/css": "^11.0.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@leafygreen-ui/palette": "^3.4.4",
+    "@mdb/consistent-nav": "^1.2.16",
+    "@mdb/flora": "^0.20.5",
+    "@mdx-js/react": "^1.6.22",
     "@redocly/openapi-core": "^1.0.0-beta.104",
     "classnames": "^2.3.1",
     "decko": "^1.2.0",
@@ -162,6 +169,7 @@
     "stickyfill": "^1.1.1",
     "style-loader": "^3.3.1",
     "swagger2openapi": "^7.0.6",
+    "theme-ui": "^0.13.1",
     "url-template": "^2.0.8"
   },
   "size-limit": [
