--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "redoc",
-  "version": "2.0.0",
+  "name": "@dop/redoc",
+  "version": "0.0.0",
   "description": "ReDoc",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Redocly/redoc"
+    "url": "https://github.com/mongodb-forks/redoc"
   },
   "browserslist": [
     "defaults"
@@ -59,7 +59,9 @@
     "license-check": "license-checker --production --onlyAllow 'MIT;ISC;Apache-2.0;BSD;BSD-2-Clause;BSD-3-Clause;CC-BY-4.0;Python-2.0' --summary",
     "docker:build": "docker build -f config/docker/Dockerfile -t redoc .",
     "prepare": "husky install",
-    "pre-commit": "pretty-quick --staged && npm run lint"
+    "pre-commit": "pretty-quick --staged && npm run lint",
+    "version": "git add -u . && git commit -m \"[RELEASE] - v$npm_package_version\"",
+    "postversion": "git push upstream main"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.12.0",
