--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -93,7 +93,7 @@ jobs:
   invalidate-cache:
     name: Clear cache
     runs-on: ubuntu-latest
-    needs: [publish, publish-cdn]
+    needs: [publish]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
