--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,5 +69,7 @@ jobs:
         run: |
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git config user.name 'github-actions[bot]'
+          git add -f cli/index.js
+          git commit --no-verify -m 'Add build artifacts'
           git tag ${{ steps.split.outputs._2 }}
           git push --tags
