--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
             npm-
 
       - name: Clean Install
-        run: npm ci && npm ci --prefix cli
+        run: npm ci
 
       - name: Bundle
         run: npm run bundle
@@ -37,7 +37,7 @@ jobs:
           name: bundles
           path: bundles
           retention-days: 1
-  
+
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -46,11 +46,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Clean Install
-        run: npm ci && npm ci --prefix cli
+        run: npm ci
 
       - name: Unit Test
         run: npm test
-  
+
   e2e-tests:
     name: E2E Tests
     needs: [bundle]
@@ -60,7 +60,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Clean Install
-        run: npm ci && npm ci --prefix cli
+        run: npm ci
 
       - name: Download bundled artifact
         uses: actions/download-artifact@v3
@@ -70,7 +70,7 @@ jobs:
 
       - name: E2E Test
         run: npm run e2e
-  
+
   publish:
     name: Publish
     needs: [unit-tests, e2e-tests]
@@ -109,11 +109,11 @@ jobs:
 
       - name: Publish npm Package
         run: |
-              npm version $RELEASE_VERSION --no-git-tag-version
-              npm publish --access public
+          npm version $RELEASE_VERSION --no-git-tag-version
+          npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-  
+
   publish-beta:
     name: Publish Beta to NPM
     needs: [unit-tests, e2e-tests]
@@ -172,7 +172,7 @@ jobs:
 
       - name: Publish npm Package
         run: |
-              npm version $RELEASE_VERSION --no-git-tag-version
-              npm publish --access public --tag beta
+          npm version $RELEASE_VERSION --no-git-tag-version
+          npm publish --access public --tag beta
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
