--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,12 @@ npm-debug.log*
 
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
-node_modules
+# node_modules
 
 lib/
 stats.json
 cypress/
-bundles/
+# bundles/
 typings/*
 !typings/styled-patch.d.ts
 
