FBI-451: Implement XML example code generation for Redoc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,21 @@
 {
   "compilerOptions": {
-    "experimentalDecorators": true,
-    "moduleResolution": "node",
-    "target": "es5",
-    "noImplicitAny": false,
-    "noUnusedParameters": true,
-    "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "sourceMap": true,
+    "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "noEmitHelpers": true,
+    "experimentalDecorators": true,
     "importHelpers": true,
+    "jsx": "react",
+    "lib": ["esnext", "dom", "WebWorker.ImportScripts"],
+    "moduleResolution": "node",
+    "noEmitHelpers": true,
+    "noImplicitAny": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "outDir": "lib",
     "pretty": true,
-    "lib": ["es2015", "es2016", "es2017", "dom", "WebWorker.ImportScripts"],
-    "jsx": "react",
+    "sourceMap": true,
+    "strictNullChecks": true,
+    "target": "es5",
     "types": ["webpack", "webpack-env", "jest"]
   },
   "compileOnSave": false,
