--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "cypress": "^7.4.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "esbuild-loader": "^2.18.0",
+    "esbuild-loader": "^3.0.1",
     "eslint": "^7.27.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react": "^7.25.1",
@@ -120,15 +120,16 @@
     "shelljs": "^0.8.4",
     "size-limit": "^7.0.4",
     "styled-components": "^5.3.0",
+    "style-loader": "^3.3.1",
     "ts-jest": "^27.0.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.0.0",
     "tslib": "^2.4.0",
     "typescript": "~4.1.0",
     "unfetch": "^4.2.0",
-    "webpack": "^5.50.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.6.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
     "webpack-node-externals": "^3.0.0",
     "workerize-loader": "github:redocly/workerize-loader#webpack-5-dist"
   },
