--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@types/styled-components": "^5.1.1",
     "@types/tapable": "^2.2.2",
     "@types/webpack": "^5.28.0",
-    "@types/webpack-env": "^1.16.0",
+    "@types/webpack-env": "^1.18.0",
     "@types/yargs": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
@@ -123,9 +123,9 @@
     "style-loader": "^3.3.1",
     "ts-jest": "^27.0.2",
     "ts-loader": "^9.2.6",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "~4.1.0",
+    "typescript": "^4.8.4",
     "unfetch": "^4.2.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
