fix: Fix future tense errors and add exceptions for config fields as headings

--- a/.github/styles/Rules/HeaderGerunds.yml
+++ b/.github/styles/Rules/HeaderGerunds.yml
@@ -5,3 +5,7 @@ level: error
 scope: heading
 tokens:
   - '^\w*ing.*'
+exceptions:
+  - expandSingleSchemaField
+  - hideLoading
+  - hideSingleRequestSampleTab
