--- a/cli/.npmrc
+++ b/cli/.npmrc
@@ -1,5 +1,5 @@
 registry=https://artifactory.corp.mongodb.com/artifactory/api/npm/npm/
-_auth=${NPM_BASE_64_AUTH}
 _email=${NPM_EMAIL}
 _always-auth=true
 git-tag-version=false
+//artifactory.corp.mongodb.com/artifactory/api/npm/npm/:_auth=${NPM_BASE_64_AUTH}
