updates museum.yaml with logo and replaces petstore with museum api in playground for local dev and some minor edits to redoc name

--- a/demo/museum.yaml
+++ b/demo/museum.yaml
@@ -6,6 +6,9 @@ info:
   contact:
     email: team@redocly.com
     url: 'https://redocly.com/docs/cli/'
+  x-logo:
+    url: 'https://redocly.github.io/redoc/museum-logo.png'
+    altText: Museum logo
   license:
     name: MIT
     url: 'https://opensource.org/license/mit/ '
