--- a/config/docker/Dockerfile
+++ b/config/docker/Dockerfile
@@ -13,6 +13,7 @@ RUN apk update && apk add --no-cache git
 WORKDIR /build
 COPY package.json package-lock.json /build/
 RUN npm ci --no-optional --ignore-scripts
+RUN npm explore esbuild -- npm run postinstall
 
 # copy only required for the build files
 COPY src /build/src
