chore: update demo bundle for v2.2.0

--- a/museum.yaml
+++ b/museum.yaml
@@ -11,7 +11,7 @@ info:
     altText: Museum logo
   license:
     name: MIT
-    url: 'https://opensource.org/license/mit/ '
+    url: 'https://opensource.org/license/mit/'
 servers:
   - url: 'https://api.fake-museum-example.com/v1'
 paths:
@@ -20,6 +20,10 @@ paths:
       summary: Get museum hours
       description: Get upcoming museum operating hours
       operationId: getMuseumHours
+      x-badges:
+        - name: 'Beta'
+          position: before
+          color: purple
       tags:
         - Operations
       parameters:
