--- a/demo/museum.yaml
+++ b/demo/museum.yaml
@@ -781,7 +781,7 @@ x-tagGroups:
       - Tickets
   - name: Entities
     tags:
-      - schemas
+      - Schemas
 
 security:
   - MuseumPlaceholderAuth: []
