--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "mark.js": "^8.11.1",
     "marked": "^4.3.0",
     "mobx-react": "^9.1.1",
+    "nanoid": "^5.1.2",
     "openapi-sampler": "^1.5.0",
     "path-browserify": "^1.0.1",
     "perfect-scrollbar": "^1.5.5",
